--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="navbar navbar-fixed-top">
          <div class="container">
             <div class="navbar-header">
-               <a class="navbar-brand" href="#">C<i class="fa fa-eercast" aria-hidden="true"></i>MPANY LGO</a>      
+               <a class="navbar-brand" href="#">C<i class="fa fa-eercast" aria-hidden="true"></i>MPANY LOGO</a>      
             </div>
             <div class="navbar-collapse collapse">
                <ul class="nav navbar-nav navbar-right">
